<resources>
    <string name="app_name">AceApp</string>
    <string name="topTitle">Ace</string>
    <string name="profile">Profile</string>
    <string name="interests">Interests</string>
    <string name="messages">Messages</string>
    <string name="recommendations">Recommendations</string>
    <string name="new_message">New Message</string>
    <string name="matches">Matches</string>
    <string name="match">Match</string>
    <string name="email">Email</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username" />
    <string name="age">Age</string>
    <string name="cisgender_man">Cisgender Man</string>
    <string name="cisgender_woman">Cisgender Woman</string>
    <string name="transgender_man">Transgender Man</string>
    <string name="transgender_woman">Transgender Woman</string>
    <string name="nonbinary">Nonbinary</string>
    <string name="genderqueer">Genderqueer</string>
    <string name="agender">Agender</string>
</resources>