<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="128dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cisgender_man" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cisgender_woman"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transgender_man"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transgender_woman"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nonbinary"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderqueer"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agender" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>